Fix spacing between title and details

--- a/legislative-awareness/src/components/style.css
+++ b/legislative-awareness/src/components/style.css
@@ -366,5 +366,13 @@ ul > ul {
 
 .rep-info {
   text-align: center;
-margin-top: 1rem;
+  margin-top: 1rem;
+}
+
+.rep-name {
+  margin-bottom: 1rem;
+}
+
+.rep-details > p {
+  margin-bottom: 0.5rem;
 }
